--- a/index.html
+++ b/index.html
@@ -1376,66 +1376,31 @@
 
             <div class="market-grid">
                 <div class="market-card">
-                    <img src="market2 .jpg" alt="Western Victorian Markets">
-                    <h3>Western Victorian Markets</h3>
+                    <img src="market2 .jpg" alt="Western Victoria Markets">
+                    <h3>Western Victoria Markets</h3>
                     <p class="market-date">Various Locations</p>
-                    <p>We pop up at markets throughout Western Victoria including Horsham. Check TikTok for current dates!</p>
+                    <p>Find us at markets throughout Western Victoria including Horsham. Follow our socials for current dates and locations! 🏪</p>
                 </div>
 
                 <div class="market-card">
-                    <img src="special.jpg" alt="Special Events">
-                    <h3>Special Events</h3>
-                    <p class="market-date">Community Gatherings</p>
-                    <p>Find us at local festivals, fairs, and community events. We love being part of your special occasions!</p>
+                    <img src="special.jpg" alt="Seasonal Celebrations">
+                    <h3>Seasonal Celebrations</h3>
+                    <p class="market-date">Year-Round Events</p>
+                    <p>We bring sweet treats to all your favourite seasons! Halloween 🎃 • Valentine's Day ❤️ • Easter 🐰 • Christmas 🎄 and more!</p>
                 </div>
 
                 <div class="market-card">
-                    <img src="market .jpg" alt="Festivals">
-                    <h3>Festivals</h3>
-                    <p class="market-date">Seasonal Events</p>
-                    <p>Hop on over for Easter fun! We bring the sweetest treats to Easter festivals, egg hunts, and spring celebrations 🐰🥚🍬</p>
+                    <img src="lb.png" alt="Private Events">
+                    <h3>Private Events</h3>
+                    <p class="market-date">Birthdays • Corporate • Weddings</p>
+                    <p>Make your special event memorable with our lolly buffets, gift packages, and custom catering 🎂🎈🍬</p>
                 </div>
 
                 <div class="market-card">
-                    <img src="dim.jpg" alt="Wimmera Steampunk Festival">
-                    <h3>2025 Wimmera Steampunk Festival</h3>
-                    <p class="market-date">Special Event</p>
-                    <p>Step back in time with sweet treats! Join us at the Wimmera Steampunk Festival for vintage lollies and Victorian-era confectionery 🎩⚙️🍬</p>
-                </div>
-
-                <div class="market-card">
-                    <img src="corporate.jpg" alt="Corporate Events">
-                    <h3>Corporate Events</h3>
-                    <p class="market-date">Professional Catering</p>
-                    <p>Make your corporate event memorable! We provide lolly bars, gift packages, and sweet catering 🍬</p>
-                </div>
-
-                <div class="market-card">
-                    <img src="media-1935676352.jpeg" alt="Carols by Candlelight">
-                    <h3>Carols by Candlelight</h3>
-                    <p class="market-date">Community Events</p>
-                    <p>We love supporting local Horsham events! Follow us to see where we'll be next 🎄✨</p>
-                </div>
-
-                <div class="market-card">
-                    <img src="horsham-fishing-competition.png" alt="Horsham Fishing Comp">
-                    <h3>Horsham Fishing Comp</h3>
-                    <p class="market-date">Community Events</p>
-                    <p>Get hooked on the fun! We'll be at the Horsham Fishing Competition 🎣🍬</p>
-                </div>
-
-                <div class="market-card">
-                    <img src="lb.png" alt="Birthday Parties">
-                    <h3>Birthday Parties</h3>
-                    <p class="market-date">Private Events</p>
-                    <p>Make your party extra sweet! We provide lolly buffets and party packages 🎂🎈🍬</p>
-                </div>
-
-                <div class="market-card">
-                    <img src="snakes-4207218077.jpg" alt="Online Store">
-                    <h3>Online Store</h3>
-                    <p class="market-date">Shop Anytime</p>
-                    <p>Browse our full range at www.tr4cestreatz.com</p>
+                    <img src="media-1935676352.jpeg" alt="Community Events">
+                    <h3>Community Events</h3>
+                    <p class="market-date">Horsham & Local Festivals</p>
+                    <p>Supporting local events like Carols by Candlelight, Steampunk Festival, and community gatherings throughout Western Victoria 🎪✨</p>
                 </div>
             </div>
         </section>
@@ -1455,7 +1420,6 @@
                         <span class="product-badge">Novelty</span>
                         <h3 class="product-name">Teeth</h3>
                         <p class="product-description">Tooth-shaped lollies with fruity flavors!</p>
-                        <div class="product-price">$3.00</div>
                     </div>
                 </div>
 
@@ -1465,7 +1429,6 @@
                         <span class="product-badge">Classic</span>
                         <h3 class="product-name">Strawberry & Cream</h3>
                         <p class="product-description">Traditional Australian flavor combination!</p>
-                        <div class="product-price">$4.00</div>
                     </div>
                 </div>
 
@@ -1475,7 +1438,6 @@
                         <span class="product-badge">Popular</span>
                         <h3 class="product-name">Frogs</h3>
                         <p class="product-description">Chewy frog-shaped lollies that hop with flavor!</p>
-                        <div class="product-price">$3.50</div>
                     </div>
                 </div>
 
@@ -1485,7 +1447,6 @@
                         <span class="product-badge">Fizzy Fun</span>
                         <h3 class="product-name">Sherbet Bombs</h3>
                         <p class="product-description">Sweet and tangy with fizzy powder!</p>
-                        <div class="product-price">$4.50</div>
                     </div>
                 </div>
 
@@ -1495,7 +1456,6 @@
                         <span class="product-badge">Classic</span>
                         <h3 class="product-name">Sultanas</h3>
                         <p class="product-description">Chocolate-coated sultanas!</p>
-                        <div class="product-price">$4.00</div>
                     </div>
                 </div>
 
@@ -1505,7 +1465,6 @@
                         <span class="product-badge">Bestseller</span>
                         <h3 class="product-name">Wizz Fizz</h3>
                         <p class="product-description">Fizzy sherbet that tingles!</p>
-                        <div class="product-price">$3.50</div>
                     </div>
                 </div>
 
@@ -1515,7 +1474,6 @@
                         <span class="product-badge">Kids' Choice</span>
                         <h3 class="product-name">Gummy Bears</h3>
                         <p class="product-description">Soft, chewy gummy bears in fruit flavors!</p>
-                        <div class="product-price">$4.50</div>
                     </div>
                 </div>
 
@@ -1525,7 +1483,6 @@
                         <span class="product-badge">Traditional</span>
                         <h3 class="product-name">Blackcurrant Jellies</h3>
                         <p class="product-description">Rich blackcurrant jelly lollies!</p>
-                        <div class="product-price">$4.00</div>
                     </div>
                 </div>
 
@@ -1535,7 +1492,6 @@
                         <span class="product-badge">Nostalgic</span>
                         <h3 class="product-name">Jelly Babies</h3>
                         <p class="product-description">Soft baby-shaped jellies!</p>
-                        <div class="product-price">$4.50</div>
                     </div>
                 </div>
 
@@ -1545,7 +1501,6 @@
                         <span class="product-badge">Value Pack</span>
                         <h3 class="product-name">Mixed Lollies</h3>
                         <p class="product-description">An assortment of our most popular treats!</p>
-                        <div class="product-price">$5.00</div>
                     </div>
                 </div>
 
@@ -1555,7 +1510,6 @@
                         <span class="product-badge">Sweet & Tangy</span>
                         <h3 class="product-name">Raspberry Buds</h3>
                         <p class="product-description">Soft raspberry-flavored buds!</p>
-                        <div class="product-price">$3.50</div>
                     </div>
                 </div>
 
@@ -1567,7 +1521,6 @@
                         <span class="product-badge">Aussie Legend</span>
                         <h3 class="product-name">Redskins</h3>
                         <p class="product-description">The iconic Australian raspberry chew! 🍓</p>
-                        <div class="product-price">$3.50</div>
                     </div>
                 </div>
             </div>
